--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </script>
 <body>
 <a href="https://bit.ly/2lZuQKC">
-    <img src="ads/1.jpg" alt="Penis ad" class="ad1">
+    <img src="https://img.buzzfeed.com/buzzfeed-static/static/campaign_images/webdr05/2013/9/18/10/9-fake-ads-people-think-are-real-1-3931-1379514723-0_big.jpg" alt="Penis ad" class="ad1">
     <img src="ads/2.jpg" alt="Kraft Ad" class="ad2">
     <img src="https://i.imgur.com/Mq8lCd0.gif" alt="Important Message" class="ad3">
     <img src="https://i.gifer.com/Eoug.gif" alt="Important Message" class="ad4">
